added liberty runtime config

--- a/Tutorial/2. Deploy to Openshift on ROKS.md
+++ b/Tutorial/2. Deploy to Openshift on ROKS.md
@@ -1,7 +1,84 @@
 # Deploy Spring Boot Application to Redhat Openshift on IBM Cloud
+
 In this part of the tutorial we explain how you can take a running Spring Boot Application and port it onto Redhat Openshift. We assume the usage of the Redhat Openshift on IBM Cloud (ROKS).
 
 ## Make the application run with (Open)Liberty runtime
+
+By default the spring boot runtime embeds a Tomcat server and you could of course leave it at that. Following [article](https://developer.ibm.com/articles/6-reasons-why-open-liberty-is-an-ideal-choice-for-developing-and-deploying-microservices/) expains why especially in context of modern Kubernetes based deployment on Openshift it is interesting to use (Open)Liberty. An even further optimization could be done as explained in the [article](https://developer.ibm.com/articles/modernize-and-optimize-spring-boot-applications/)
+
+### 1. Add the liberty plugin to the pom.xml file
+
+The easiest way to do this is when using maven as build tool, as we do in this example, is to use the maven openliberty plugin. For this open the pom.xml file and add the below section in the plugins part.
+
+```xml
+<plugin>
+    <groupId>io.openliberty.tools</groupId>
+    <artifactId>liberty-maven-plugin</artifactId>
+    <version>3.3.3</version>
+    <configuration>
+      <appsDirectory>apps</appsDirectory>
+      <installAppPackages>spring-boot-project</installAppPackages>
+      <include>minify,runnable</include>
+      <packageName>ProductSpringBootApp</packageName>
+    </configuration>
+    <executions>
+      <execution>
+     <id>package-server</id>
+     <phase>package</phase>
+     <goals>
+       <goal>create</goal>
+       <goal>install-feature</goal>
+       <goal>deploy</goal>
+       <goal>package</goal>
+     </goals>
+      </execution>
+    </executions>
+</plugin>
+```
+
+This plugin allows maven to package and run an application as a spring boot application based on liberty runtime. As you can see in the code we have added the necessary goal descriptions to allow packaging applications. Mor details on the usage of this plugin can be found in the [repository](https://github.com/OpenLiberty/ci.maven)
+
+Now perform the below on a command line on the project directory.
+
+`./mvnw install`
+
+This will download the plugin and its dependencies from the maven repositories. As we did not yet create a configuration file for the lieberty runtime, this command produces some errors with regards to the liberty dependency towards the Spring Boot framework.
+
+### 2. Perform a liberty package
+
+The first step to achieve this is to add a server.xml file to configure the liberty runtime. This can be done in a liberty/config directory under the src/main. See picture below.
+![liberty tree](./images/liberty-tree.jpg)
+
+Add the following content in the server.xml :
+
+```xml
+
+<?xml version="1.0" encoding="UTF-8"?>
+<server description="customer server">
+    <featureManager>
+        <feature>servlet-4.0</feature>
+        <feature>springBoot-2.0</feature>
+    </featureManager>
+    <httpEndpoint id="defaultHttpEndpoint" httpPort="9080" httpsPort="9443" />
+    <springBootApplication id="product" location="thin-product-0.0.1-SNAPSHOT.jar" name="product">
+        <applicationArgument>--server.server.context-path=/ucll</applicationArgument>
+        <applicationArgument>--server.servlet.context-path=/ucll</applicationArgument>
+    </springBootApplication>
+</server>
+```
+
+Notice a few important facts in this configuration file. The Application id and name have to match with what you have been using in the pom file. The jar file gets a prefix thin-. This has to do with how the liberty tools prepare the Spring boot application for the Liberty runtime. The orignal fat jar file is stripped from its internal Tomcat runtime and the needed liberty components are added into the generated jar. This is done based on the feature specifications in the config file.
+The added applicationArguments will determine the contextroot for the application and the servlets deployed.
+
+### 3. Test the application
+
+It is now possible to run the application with the liberty runtime. This can be done with the command :
+
+```sh
+./mvnw liberty:run
+```
+
+This is packaging the application, generating the new jar file and starting the liberty server. Notice the server will be running on the ports specified in the server.xml file.
 
 ## Ensure the application can run in a Docker container
 
