fixed trailing space in docker file

--- a/Tutorial/2. Deploy to Openshift on ROKS.md
+++ b/Tutorial/2. Deploy to Openshift on ROKS.md
@@ -174,6 +174,10 @@ Start out by creating a name-space for your application.
 
 `kubectl create namespace ucll-product`
 
+Make this your default namespace for the next commands.
+
+`kubectl config set-context --current --namespace=ucll-product`
+
 ### 1. Create a config Map
 
 The properties for the application which were in application.properties will now have to go into a config map. The exception being the user/password which in Kubernetes you would typically store in a secret.
@@ -224,6 +228,119 @@ data:
 
 ```
 
+Use kubectl command to create the secret.
+
+You should now be able to see both objects also in the namespace using the Openshift GUI console.
+
 ### 3. Create a deploy.yaml file
 
+Now we can create a deploy.yaml file as below.
+
+```
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: product-deployment
+  labels:
+    app: product
+spec:
+  selector:
+    matchLabels:
+      app: product
+  template:
+    metadata:
+      labels:
+        app: product
+    spec:
+      containers:
+      - name: product
+        image: us.icr.io/ucll/product:0.1
+        ports:
+        - containerPort: 9080
+        envFrom:
+        - configMapRef:
+          name: product-config
+        envFrom:
+        - secretRef:
+          name: postgresql-credentials
+       operties.hibernate.jdbc.lob.non_contextual_creation"
+          
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: product-service
+spec:
+  selector:
+    app: product
+  ports:
+  - name: http
+    protocol: TCP
+    port: 9080
+    targetPort: 9080
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: product-service-ingress
+spec:
+  rules:
+  - host: ucll.cluster-ingress-subdomain
+    http:
+      paths:
+      - path: /ucll
+        backend:
+          serviceName: product
+          servicePort: 9080
+```
+
+This deploy file will define 3 Kubernetes objects :
+
+* The deployment itself which defines the way the container will be instantiated. It maps the environment based on the config map and the secret. Important to note is the reference to the image. This needs to point to your container registry and namespace in IBM Cloud. The actual tag value will be substituted by the pipeline.
+* A basic service definition needs to be defined so that the container gets exposed within the cluster.
+* To publicly expose the application an ingress definition needs to be created. This ingress definition has to be matched to the ingress subdomain of your cluster. Again the pipeline will substitute the actual correct value for this.
+
 ## Setup a devops pipeline
+
+Connected to your ROKS Openshift cluster you can setup a devops pipeline in IBM Cloud. To do this open your Cloud UI and navigate to the cluster on which you want to deploy. 
+
+![pipeline creation](images/pipeline-creation-start.png)
+
+Click on the create toolchain button on the next screen select the Develop a Kubernetes App pipeline.
+
+![template](images/pipeline-template.png)
+
+Fill out the information to connect to your github repository. 
+
+![github](images/github-connection.png)
+
+When the connection to the github repo succeeds then click on the Delivery pipeline tab. Use the procedure refered on the page to generate a cloud api key. This will allow the pipeline to access your Openshift cluster resources.
+
+![cloud connection](images/cloud-connection.png)
+
+Once this is done you can select your cluster and image registry. If not yet done first configure an image repository with a namespace. The cluster namespace in this screen has to correspond to the namespace which you have been defining in the previous step. The deployment will expect the config map and secret to be there.
+Once all values are correctly filled out you can click the create button. You should see the next screen with an overview of the pipeline.
+
+![pipeline dashboard](images/toolchain-dashboard.png)
+
+Click on the Delivery Pipeline as we still need to perform a number of customizations for it to work correctly with our application.
+
+![delivery pipeline](images/delivery-pipeline.png)
+
+We need to indicate that we want to perform a maven type build. Click on the settings (gear) of the BUILD stage. Make the build type maven.
+
+![maven build](images/maven-build.png)
+
+Also open the environment variables and put a name for the image. This is the name which is used to tag the image in the registry and needs to be unique amongst all the applications using the same registry namespace.
+
+![build environment](images/build-environment.png)
+
+What also needs to be adapted is the DEPLOY stage. Open the environment tab for this stage and ensure that the properties correspond with the deploy.yaml file that you created before. An example of this is :
+
+![deploy stage](images/deploy-stage.png)
+
+
+Now run the pipeline by starting the BUILD stage.
