--- a/Tutorial/2. Deploy to Openshift on ROKS.md
+++ b/Tutorial/2. Deploy to Openshift on ROKS.md
@@ -188,7 +188,7 @@ The config Map depends on the connection data for your database, but could look 
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: product-configmap
+  name: product-config
   labels:    
     app: "product"
 data:
@@ -220,7 +220,7 @@ kind: Secret
 metadata:
   name: postgresql-credentials
   labels:    
-    app: "customer-service"
+    app: "product"
 type: Opaque
 data:
   spring.datasource.username: "<base64-encoded-user>"
@@ -290,7 +290,7 @@ spec:
       paths:
       - path: /ucll
         backend:
-          serviceName: product
+          serviceName: product-service
           servicePort: 9080
 ```
 
