fixed ingres host conflict

--- a/Tutorial/2. Deploy to Openshift on ROKS.md
+++ b/Tutorial/2. Deploy to Openshift on ROKS.md
@@ -285,7 +285,7 @@ metadata:
   name: product-service-ingress
 spec:
   rules:
-  - host: ucll.cluster-ingress-subdomain
+  - host: ucll-product.cluster-ingress-subdomain
     http:
       paths:
       - path: /ucll
@@ -341,3 +341,8 @@ What also needs to be adapted is the DEPLOY stage. Open the environment tab for 
 
 
 Now run the pipeline by starting the BUILD stage.
+
+
+
+
+Remark : Perform these steps to remove the warning on the image scan https://www.ibm.com/cloud/architecture/tutorials/integrate-devops-insights-with-cd-pipeline?task=3
