fixes to tutorial script

--- a/Tutorial/2. Deploy to Openshift on ROKS.md
+++ b/Tutorial/2. Deploy to Openshift on ROKS.md
@@ -328,6 +328,11 @@ Click on the Delivery Pipeline as we still need to perform a number of customiza
 ![delivery pipeline](images/delivery-pipeline.png)
 
 We need to indicate that we want to perform a maven type build. Click on the settings (gear) of the BUILD stage. Make the build type maven.
+Adapt the maven command so to pass it the database connection properties. Otherwise the spring boot package process will fail as it needs to connect to the data store. The command should look like :
+
+`mvn -B package -Dspring.jpa.database="POSTGRESQL" -Dspring.datasource.platform="postgres" -Dspring.datasource.url="jdbc:postgresql://<datase-host>:<port>/postgres" -Dspring.datasource.ssl="true" -Dspring.datasource.sslmode="verify-full" -Dspring.jpa.show-sql="true" -Dspring.jpa.generate-ddl="true" -Dspring.jpa.hibernate.ddl-auto="create-drop" -Dspring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation="true"   -Dspring.datasource.username=$dbuser -Dspring.datasource.password=$dbpassword`
+
+Of course you need to complete with your own connection settings. Notice that we defined the credentials as environment variables, to keep them from sight.
 
 ![maven build](images/maven-build.png)
 
@@ -341,7 +346,7 @@ What also needs to be adapted is the DEPLOY stage. Open the environment tab for 
 
 
 Now run the pipeline by starting the BUILD stage.
-
+Notice that you will still get a warning on the image check step. This has to do with the fact that a number of environment variables need to be defined to make this step interact correctly with the Devops Insight
 
 
 
